trunk/Archive2/91/4989388b56fc9e/output
main.cpp:1:1: error: stray '\' in program
 In file included from C:\Project\CGame.h:9:0,
 ^
main.cpp:1:1: error: stray '\' in program
main.cpp:2:18: error: stray '\' in program
                  from C:\Project\CEnemy.h:3,
                  ^
main.cpp:2:18: error: stray '\' in program
main.cpp:3:18: error: stray '\' in program
                  from C:\Project\CEnemy.cpp:1:
                  ^
main.cpp:3:18: error: stray '\' in program
main.cpp:4:1: error: stray '\' in program
 C:\Project\CEnemyHealth.h:10:42: error: 'CEnemy' has not been declared
 ^
main.cpp:4:1: error: stray '\' in program
main.cpp:4:41: warning: character constant too long for its type
 C:\Project\CEnemyHealth.h:10:42: error: 'CEnemy' has not been declared
                                         ^
main.cpp:5:1: error: stray '\' in program
 C:\Project\CEnemyHealth.h:11:9: error: 'CEnemy' does not name a type
 ^
main.cpp:5:1: error: stray '\' in program
main.cpp:5:40: warning: character constant too long for its type
 C:\Project\CEnemyHealth.h:11:9: error: 'CEnemy' does not name a type
                                        ^
main.cpp:1:1: error: 'In' does not name a type
 In file included from C:\Project\CGame.h:9:0,
 ^
